# ChangeLog for sys-kernel/upkern
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-block/open-iscsi/ChangeLog,v 1.12 2007/02/22 00:59:56 jokey Exp $

  21 May 2012; <alunduil@gentoo.org> upkern-4.0.0.ebuild:
  Removed the incorrect git-2 eclass

*upkern-4.0.0 (13 May 2012)

  13 May 2012; <alunduil@gentoo.org> +upkern-4.0.0.ebuild:
  Add upkern-4.0.0 to the tree.

  07 Apr 2012; <alunduil@gentoo.org> upkern-9999.ebuild:
  Changing DEPEND and RDEPEND to reflect portage defaults.

  04 Apr 2012; <alunduil@gentoo.org> upkern-9999.ebuild:
  Adding an initrd use flag

  04 Apr 2012; <alunduil@gentoo.org> upkern-9999.ebuild:
  Adding the man page to upkern.

*upkern-9999 (27 Mar 2012)

  27 Mar 2012; <alunduil@gentoo.org> +upkern-9999.ebuild:
  Added a live ebuild for upkern

  27 Mar 2012; <alunduil@gentoo.org> -upkern-2.0.14.ebuild,
  -upkern-3.1.6.ebuild, -upkern-3.1.7.ebuild:
  Removed older versions that are no longer or should be no longer in use

*upkern-3.1.9 (23 Jul 2011)

  23 Jul 2011; <alunduil@gentoo.org> +upkern-3.1.9.ebuild:
  Adding upkern-3.1.9

  16 Jun 2011; <alunduil@gentoo.org> upkern-3.1.8.ebuild, metadata.xml:
  Stable on x86 with gentoolkit 0.3.0.4

*upkern-3.1.8 (12 Dec 2010)

  12 Dec 2010; <alunduil@gentoo.org> +upkern-3.1.8.ebuild:
  upkern-3.1.8

*upkern-3.1.7 (12 Dec 2010)

  12 Dec 2010; <alunduil@gentoo.org> -upkern-3.1.2.ebuild,
  -upkern-3.1.3.ebuild, -upkern-3.1.4.ebuild, -upkern-3.1.5.ebuild,
  +upkern-3.1.7.ebuild:
  Adding upkern-3.1.7

*upkern-3.1.6 (27 Nov 2010)

  27 Nov 2010; <alunduil@gentoo.org> +upkern-3.1.6.ebuild:
  Adding upkern 3.1.6

  07 Nov 2010; <alunduil@gentoo.org> -upkern-2.0.11-r1.ebuild,
  -upkern-2.0.12.ebuild, -upkern-2.0.13.ebuild:
  Cleaning out unsupported versions.

*upkern-2.0.14 (24 Oct 2010)

  24 Oct 2010; <alunduil@gentoo.org> +upkern-2.0.14.ebuild:
  Adding upkern 2.0.14

*upkern-2.0.13 (24 Oct 2010)
