@@ -1,9 +1,11 @@
 DIST upkern-3.1.8.tar.bz2 18331 RMD160 6982883ff920b91069a018832cf05cc9fcc6e7d1 SHA1 23e103094c7151f09f9332032516680ef67fc0de SHA256 fb411c96c8a5e8f9c0f1d99af91abfad16d862135870bcb91b113b0897f19884
 DIST upkern-3.1.9.tar.gz 20215 RMD160 f5f6190372c9a067d397bbe05f99b05e7212161b SHA1 90dd99a982729c5a27f3d97ddc4ed40e5c54925e SHA256 791c39279b019b285afc1ae7dd409e498909b1a1fd3e115a93967fc040cdaccd
 DIST upkern-4.0.0.tar.bz2 10781 RMD160 bdcc7fa1d95b8a7baf4374dcf18c71a5f1a989a6 SHA1 b17c66f034fd02b0c60e314ff0f8e8c9141b8983 SHA256 932cd33cabdc206d17c6f5a688014c018777cd6fff49a90f004e90585f88716c
+DIST upkern-4.0.1.tar.bz2 23469 RMD160 167ef020bf7e5efa7dbf9f64c1db08f78b57c6f6 SHA1 713fb7d8956e6c99fc6a46fef0409009f7688dad SHA256 0c1fae9c985745e907e7fb11878df2c0d9780557bf0fd869f948be579741d330
 EBUILD upkern-3.1.8.ebuild 830 RMD160 4c95c1193cfbcd68899ffd1bd910663572e0e79e SHA1 bdbf548ad52a308df62d7095d4612292e103b387 SHA256 3bf6565960b3e3d459fcefadc8c469f3f69e1d6f902362cfa7297986a2eefeaf
 EBUILD upkern-3.1.9.ebuild 859 RMD160 576d7886aa7cd6c7f7c7eeb5032cbb8db5334386 SHA1 efd10847107f1cea8cf42898f4bfa84fde09a5ad SHA256 a7e08e28440b45245e59c219c87a26cc8b7cccd7e0ecece074b2414bc1e254d8
 EBUILD upkern-4.0.0.ebuild 625 RMD160 483913cc58bd767f7be7de9f57d89aa2ee3a64aa SHA1 a66e0a2219687faababcb76bffab6433c2988317 SHA256 0a4777cbf3dd58576bf94235cda19cda591ace3c4607e1b72736518953f2f307
+EBUILD upkern-4.0.1.ebuild 625 RMD160 483913cc58bd767f7be7de9f57d89aa2ee3a64aa SHA1 a66e0a2219687faababcb76bffab6433c2988317 SHA256 0a4777cbf3dd58576bf94235cda19cda591ace3c4607e1b72736518953f2f307
 EBUILD upkern-9999.ebuild 595 RMD160 14a70b87c7b40e47445f1485642bd7568034ad1e SHA1 080174199befb0fc82b574cc617e83d83c77fe1b SHA256 628704c3b1b2a2628b3c3ea30ee1ebfe863360c694745203590eddeecd103134
-MISC ChangeLog 3160 RMD160 803256b043a857a550b92b655dfdb7f294ef0deb SHA1 11a5df5f1628fe90e3fe6bf450f3073f3fc19281 SHA256 bdcd47a9b46bfcb5a59c1c854f531a807f2bf999e0ab228029dc48a045d34f4c
+MISC ChangeLog 3286 RMD160 fa736f6e78f9c17b0a6e4d12eaac0c66d7fbe5df SHA1 8183f536d1a401eddf1592391cb80dbff62c8497 SHA256 7eb3b835da4b7fce4398cae37c6b1768dd0488e5748e8cad87ddece7fa36fd51
 MISC metadata.xml 461 RMD160 40a4b831510c1f251095f6972e96260b39020cff SHA1 95e1e29d323fbb6511a26c2c9ade93c19a9bf100 SHA256 2610c87e47dd4156c2fa3b7c2eb5767a62ff4efac3a88c6f1416475acc963289
