@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sys-block/open-iscsi/ChangeLog,v 1.12 2007/02/22 00:59:56 jokey Exp $
 
+*upkern-4.0.1 (22 May 2012)
+
+  22 May 2012; <alunduil@gentoo.org> +upkern-4.0.1.ebuild:
+  Adding 4.0.1 with the new tarball.
+
   21 May 2012; <alunduil@gentoo.org> upkern-4.0.0.ebuild:
   Removed the incorrect git-2 eclass
 
